Week6/HarunaUtsumi/kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: gcr.io/hens-and-roosters/backend
        name: backend
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: LoadBalancer
  ports:
  - name: "http-port"
    protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: backend
